# SAEOSS-Portal

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  index.html  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: BuildMKDocsAndPublishToGithubPages.yml  build-and-push.yml  build-and-test.yml
about/: index.html
about/code-of-conduct/: index.html
about/contributing/: index.html
about/disclaimer/: index.html
about/license/: index.html
about/running-instances/: index.html
administrator/: index.html
administrator/guide/: index.html
administrator/manual/: index.html
administrator/manual/dashboard/: index.html
administrator/manual/harvesting-settings/: index.html
administrator/manual/metadata-validator/: index.html
administrator/manual/profile/: index.html
administrator/manual/profile-settings/: index.html
administrator/manual/stac-harvester/: index.html
administrator/manual/super-user/: index.html
administrator/manual/sysadmin-settings/: index.html
administrator/manual/usage-statistics/: index.html
ckanext/saeoss/: __init__.py  constants.py  dcpr_dictization.py  email_notifications.py  error_report_dictization.py  get_releases.py  helpers.py  jobs.py  releases.txt  wsgi.py
ckanext/saeoss/assets/: webassets.yml
ckanext/saeoss/blueprints/: about.py  contact.py  dcpr.py  emc.py  error_report.py  file_parser.py  map.py  news.py  news_utils.py  publish.py  reset_password.py  saeoss.py  saved_searches.py  stac_endpoint.py  stac_harvest.py  sys_stats.py  thematic_groups.py  user_permissions.py  user_register.py  validator.py  xml_parser.py
ckanext/saeoss/cli/: __init__.py  _bootstrap_data.py  _cbers.py  _parse_date_time.py  _sample_datasets.py  _sample_dcpr_error_reports.py  _sample_dcpr_requests.py  _sample_organizations.py  _sample_users.py  commands.py  docker_entrypoint.py  utils.py
ckanext/saeoss/logic/: converters.py  schema.py  validators.py
ckanext/saeoss/migration/: __init__.py
ckanext/saeoss/model/: dcpr_error_report.py  dcpr_request.py  error_report.py  reporting_tool.py  saved_search.py  stac_harvester.py  user_extra_fields.py  user_permissions.py
ckanext/saeoss/plugins/: csw_harvesting_plugin.py  emc_dcpr_plugin.py  harvesting_plugin.py  saeoss_plugin.py  utils.py
ckanext/saeoss/scheming/: dataset_schema.yaml  presets.yaml
ckanext/saeoss/templates/: base.html  contact.html  data_capture.html  error_document_template.html  footer.html  header.html  news.html  page.html  publish.html  saved_searches.html  sys_stats.html
ckanext/sample_data/: LC91700630852023033JSA00_IDF.xml  RADARSAT-2.xml
ckanext/sample_data/cbers/: CB04-MUX-93-119-20151022-L20000019418.XML
developer/: index.html
developer/documentation/: index.html
developer/documentation/writing/: index.html
developer/guide/: index.html
developer/guide/SAEOSS_DB/: anomalies.html  deletionOrder.txt  index.html  relationships.html
developer/guide/architecture/: index.html
developer/guide/building/: index.html
developer/guide/cloning/: index.html
developer/manual/: index.html
devops/: index.html
devops/guide/: index.html
devops/manual/: index.html
docker/: build.sh  ckan-ci-settings.ini  ckan-dev-settings.ini  ckan-settings.ini  ckan-test-settings.ini  compose.py  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  prepare-for-frontend-dev.sh  smoketest.py
docker/csw-harvest-target/: apiso-repository.db  pycsw-config.cfg
docker/datastore-db/: create-datastore-readonly-user.sh
docker/pycsw/: pycsw-config.cfg  pycsw-config.yml  pycsw_repository_mappings.py  sans.py
docker/solr/: init-managed-schema.sh  managed-schema  schema.xml
docs/: mkdocs-base.yml  mkdocs-html.yml  mkdocs-pdf.yml  mkdocs.yml  run-server.sh
docs/css/: extra.css
docs/site/: 404.html  index.html
docs/src/: index.md
docs/templates/: graphics.scss
playwright/ci-test/: base-url.sh  package.json  playwright.config.ts  run-tests.sh
playwright/staging-tests/: README.md  package-lock.json  package.json
search/: search_index.json
tests/: _test_integration_dcpr_requests.py  test_cli_commands.py  test_integration_dcpr_auth.py  test_integration_error_reports.py  test_integration_org_editor_role.py  test_unit_converters.py  test_unit_get_reference_date.py  test_unit_helpers.py  test_unit_logic_emc.py  test_unit_plugin.py  test_unit_template_helpers.py  test_unit_validators.py
user/: index.html
user/guide/: index.html
user/manual/: index.html
user/quickstart/: index.html
user/research/: index.html
webserver/: docker-compose.yml  generate_ssl.sh
webserver/nginx/: default.conf
(+689 files in other folders)
